[package]
name = "lol_chat_parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A parser for League of Legends chat logs that extracts structured data into JSON."

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
